// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-fqEDVf kpxnnH"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-fqEDVf kpxnnH"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-fqEDVf kpxnnH"
>
  <span
    className="sc-oTTbF iVtNEC"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-fqEDVf kpxnnH"
>
  <div
    className="sc-dloDHE fdicls"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-fqEDVf hRbHoS"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-fqEDVf fccUYO"
  size="small"
/>
`;
